// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponsiveItemContainer should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div>
  <span
    class="rmd-responsive-item-container rmd-responsive-item-container--auto"
  >
    <img
      alt=""
      src="/some-image.png"
    />
  </span>
</div>
`;

exports[`ResponsiveItemContainer should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div>
  <span
    class="rmd-responsive-item-container rmd-responsive-item-container--auto rmd-full-width"
  >
    <img
      alt=""
      src="/some-image.png"
    />
  </span>
</div>
`;

exports[`ResponsiveItemContainer should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<div>
  <span
    class="rmd-responsive-item-container rmd-responsive-item-container--auto custom-class-name"
    style="background-color: orange;"
  >
    <img
      alt=""
      src="/some-image.png"
    />
  </span>
</div>
`;

exports[`ResponsiveItemContainer should apply the correct styling, HTML attributes, and allow a ref 4`] = `
<div>
  <span
    class="rmd-responsive-item-container"
    style=""
  >
    <img
      alt=""
      src="/some-image.png"
    />
  </span>
</div>
`;

exports[`ResponsiveItemContainer should apply the correct styling, HTML attributes, and allow a ref 5`] = `
<div>
  <span
    class="rmd-responsive-item-container rmd-responsive-item-container--auto rmd-responsive-item-container--auto-scale"
    style=""
  >
    <img
      alt=""
      src="/some-image.png"
    />
  </span>
</div>
`;

exports[`ResponsiveItemContainer should apply the correct styling, HTML attributes, and allow a ref 6`] = `
<div>
  <span
    class="rmd-responsive-item-container rmd-responsive-item-container--auto rmd-responsive-item-container--aspect-ratio rmd-responsive-item-container--16-9"
    style=""
  >
    <img
      alt=""
      src="/some-image.png"
    />
  </span>
</div>
`;

exports[`ResponsiveItemContainer style utility function should be callable without any arguments 1`] = `"rmd-responsive-item-container rmd-responsive-item-container--auto"`;
